--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>BagOfStuff</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
-<body class="mat-typography">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
+<body>
   <app-root></app-root>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
@@ -36,5 +30,6 @@
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
   </script>
-</body>
-</html>
+<script src="runtime.768148e1b4ddf89f00a8.js" defer></script><script src="polyfills.ba7b1ec662b2280be5b1.js" defer></script><script src="main.4fd665fa804abf3e7981.js" defer></script>
+
+</body></html>
